restart generate model dan migrations
